--- a/kinkade.css
+++ b/kinkade.css
@@ -52,50 +52,74 @@ body {
     width: 256px;
     opacity: 0.2;
 }
-#saveButton {
-    font-size: 30px;
-    float: right;
-    clear: none;
-}
+
+/* color picking */
+
 .jscolor {
     width: 100%;
 }
-#canvaswrapper {
-    height: 256px;
-    margin: 4px;
-    top: 20px;
-    overflow: hidden;
-}
-.rewindwrapper {
-    display:inline-block;
-}
-#snapshot {
-    margin-left: 25px;
-}
-#flipspan {
-    margin-left: 25px;
-    color: #aaa;
-}
+
 #swatches {
     width: 100%;
     height: 1em;
-    /*border: 2px solid blue;*/
-    margin: 5px auto;
-    /*margin-bottom: 1em;*/
+    margin: 5px auto 0;
 }
 .swatch {
     width: 14.39%;
     height: 100%;
     background-color: grey;
-    margin: 2px;
+    margin: 0 2px;
     float: left;
     border: 1px solid #ccc;
 }
-#webcamdiv {
-    display: none;
+
+/* brushes */
+
+.brushes {
+    width: 100%;
+    float: left;
+    margin: 0 auto;
+    text-align: center;
 }
-#recordbutton {
-    display: none;
+
+.hitarea {
+    width: 50px;
+    height: 45px;
+    float: left;
+    cursor: pointer;
+    margin: 2px 6%;
+}
+.hitarea-fuzzy {
+    width: 50px;
+    height: 43px;
+    float: left;
+    cursor: pointer;
+    margin: 2px 6%;
+}
+.hitarea-selected {
+    width: 50px;
+    height: 43px;
+    float: left;
+    cursor: pointer;
+    margin: 2px 6%;
+    background-color: pink;
+}
+.hitarea-fuzzy-selected {
+    width: 50px;
+    height: 43px;
+    float: left;
+    cursor: pointer;
+    margin: 2px 6%;
+    background-color: pink;
+}
+.hitarea:hover > button {
+    background-color: red;
+}
+.hitarea-fuzzy:hover > button {
+    background-color: red;
+    -moz-box-shadow: 0px 0px 18px 18px red;
+    -webkit-box-shadow: 0px 0px 18px 18px red;
+    box-shadow: 0px 0px 18px 18px red;
 }
 
 .button-small {
@@ -107,20 +131,10 @@ body {
     -moz-border-radius:7px;
     -webkit-border-radius:7px;
     border-radius:7px;
-    /*display:inline-block;*/
-    /*cursor:pointer;*/
     color:#ffffff;
     padding:7px 7px;
     border: none;
-    margin: 0 auto;
-    /*margin-left: 25%;*/
-}
-.button-small:hover {
-    background-color:#5cbf2a;
-}
-.button-small:active {
-    position:relative;
-    top:1px;
+    margin: 14px auto;
 }
 
 .button-big {
@@ -132,67 +146,36 @@ body {
     -moz-border-radius:16px;
     -webkit-border-radius:16px;
     border-radius:16px;
-    /*display:inline-block;*/
-    /*cursor:pointer;*/
     color:#ffffff;
     padding:16px 16px;
     border: none;
-    margin: 0 auto;
-    /*margin-left: 10%;*/
+    margin: 5px auto;
 }
-.button-big:hover {
-    background-color:#5cbf2a;
-}
-.button-big:active {
-    position:relative;
-    top:1px;
-}
-
 
 .button-blurry {
     pointer-events: none;
-    -moz-box-shadow: 0px 0px 18px 18px #3dc21b;
-    -webkit-box-shadow: 0px 0px 18px 18px #3dc21b;
-    box-shadow: 0px 0px 18px 18px #3dc21b;
+    -moz-box-shadow: 0px 0px 16px 16px #3dc21b;
+    -webkit-box-shadow: 0px 0px 16px 16px #3dc21b;
+    box-shadow: 0px 0px 16px 16px #3dc21b;
     background-color:#44c767;
-    -moz-border-radius:22px;
-    -webkit-border-radius:22px;
-    border-radius:22px;
-    /*display:inline-block;
-    cursor:pointer;*/
+    -moz-border-radius:16px;
+    -webkit-border-radius:16px;
+    border-radius:16px;
     color:#ffffff;
-    font-family:Arial;
-    font-size:17px;
     padding:1px 1px;
     border: none;
     margin: 0 auto;
-    /*margin-left: 15%;*/
+    margin-top: 20px;
 }
-.button-blurry:hover {
-    background-color:#5cbf2a;
-}
-.button-blurry:active {
-    position:relative;
-    top:1px;
-}
-.hitarea {
-    width: 50px;
-    float: left;
-    cursor: pointer;
-    /*margin: 0 auto;*/
-    margin: 5px 6%;
-}
-.brushes {
-    width: 100%;
-    float: left;
-    margin: 0 auto;
-    text-align: center;
-}
+
+/* presets */
+
 #presets {
     position: absolute;
     right: 280px;
     z-index: 1000;
 }
+
 #examples {
     font-family: sans-serif;
     text-transform: uppercase;
