--- a/kinkade.css
+++ b/kinkade.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Roboto,sans-serif;
     margin: 0px;
     border: 0px;
     padding: 0px;
@@ -20,11 +21,12 @@ body {
     position: absolute;
     right: 6px;
     z-index: 1000;
-    background: white;
     padding: 4px;
     width: 264px;
     display: block;
+    background-color: #2e3033;
     border: 1px solid black;
+    color: #eee;
 }
 #kcanvas {
     position: absolute;
@@ -183,6 +185,21 @@ body {
     position: absolute;
     right: 280px;
     z-index: 1000;
+    background-color: #2e3033;
+    color: #eee;
+}
+
+#panes a {
+    color: blue;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0; 
 }
 
 #examples {
@@ -191,7 +208,6 @@ body {
     font-size: 13px;
     z-index: 1000;
     float: right;
-    background: white;
     padding: 4px;
     width: 264px;
     display: none;
@@ -203,7 +219,6 @@ body {
     text-transform: uppercase;
     font-size: 13px;
     z-index: 1000;
-    background: white;
     padding: 4px;
     width: 264px;
     display: none;
@@ -215,7 +230,6 @@ body {
     text-transform: uppercase;
     font-size: 13px;
     z-index: 1000;
-    background: white;
     padding: 4px;
     width: 408px;
     display: none;
@@ -249,6 +263,10 @@ body {
 }
 
 /* other buttons and controls */
+
+input[type=range]:disabled {
+  opacity: .3;
+}
 
 .slider {
     width: 98%;
