--- a/kinkade.css
+++ b/kinkade.css
@@ -16,7 +16,7 @@ hr {
     height: 1px;
     border: 0;
     background-color: #666;
-    margin: 1em 0;
+    margin: .8em 0;
     padding: 0; 
 }
 
